--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 </head>
 <body>
     <div class="selector-buttons">
-        <button class="selector-button active" onclick="showPane(0)">Pane 1</button>
-        <button class="selector-button" onclick="showPane(1)">Pane 2</button>
-        <button class="selector-button" onclick="showPane(2)">Pane 3</button>
+        <button class="selector-button active" onclick="showPane(0)">Drunk Person</button>
+        <button class="selector-button" onclick="showPane(1)">Harrasment</button>
+        <button class="selector-button" onclick="showPane(2)">Trespassing</button>
     </div>
 
     <div class="embed-container">
