--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
 </head>
 <body>
     <div class="selector-buttons">
-        <button class="selector-button active" onclick="showPane(0)">Pane 1</button>
-        <button class="selector-button" onclick="showPane(1)">Pane 2</button>
-        <button class="selector-button" onclick="showPane(2)">Pane 3</button>
-        <button class="selector-button" onclick="showPane(3)">Boulder Crime Map</button>
+        <button class="selector-button active" onclick="showPane(0)">Drunk Person</button>
+        <button class="selector-button" onclick="showPane(1)">Harassment</button>
+        <button class="selector-button" onclick="showPane(2)">Trespassing</button>
     </div>
 
     <div class="embed-container">
@@ -95,9 +94,7 @@
                 <noscript><img src="https://public.flourish.studio/visualisation/20322564/thumbnail" width="100%" alt="map visualization" /></noscript>
             </div>
         </div>
-        <div class="embed-pane">
-            <iframe src="https://absolutevan.github.io/boulder-crime-map/index.html" frameborder="0" width="100%" height="100%" style="min-height: 500px;"></iframe>
-        </div>
+    
     </div>
 
     <script>
