--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <style>
         .embed-container {
             position: relative;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
-            height: 0;
-            overflow: hidden;
+            height: auto; /* Allow height to grow based on content */
             max-width: 100%; /* Set maximum width to 100% to avoid cropping */
             margin: 0 auto; /* Center the container */
+            overflow: visible;
         }
 
+
         .embed-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            height: auto; /* Allow iframe height to grow */
             border: 0;
         }
+
 
         .selector-buttons {
             margin-bottom: 20px;
